<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/auth_reg2_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".logic.Registration2Activity">


    <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/linearProgressIndicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:id="@+id/openMeetLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="OpenMeet Logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/openmeet_blank_logo" />

    <TextView
            android:id="@+id/instructionTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="prompt"
            android:textAlignment="center"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/openMeetLogo" />


    <Button
            android:id="@+id/continueBtn"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginBottom="50dp"
            android:text="@string/continue_btn"
            app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
            android:id="@+id/sexualPrefsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="19"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionTxt">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/genderIdentityInput"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:hint="@string/genderIndentity_hint">

            <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:simpleItems="@array/gender_identity_items" />

        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/genderOrientationInput"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="9"
                android:hint="@string/genderOrientation_hint">

            <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:simpleItems="@array/gender_orientation_items" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filterField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/interestFilter_hint"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionTxt"
            app:startIconDrawable="@drawable/baseline_filter_list_24">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
            android:id="@+id/interestLayoutView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/continueBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterField">

        <LinearLayout
                android:id="@+id/interestLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <!-- Qui le checkbox -->

        </LinearLayout>


    </ScrollView>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/biographyField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:hint="@string/biography_hint"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionTxt">


        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:gravity="clip_vertical"
                android:singleLine="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
            android:id="@+id/imagesLayoutView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/continueBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterField">

        <LinearLayout
                android:id="@+id/imageLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>